Multi-monitor screen freeze when resuming from sleep
Testing main 44.rc at 6991172b I find it can't resume from sleep properly if two monitors are plugged in.
Both monitors wake up, but one is completely frozen and the other is partially frozen (stops responding to anything but cursor movement).
Using Intel graphics with two USB-C monitors.
Edited by Daniel van Vugt